--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,11 @@ body {
 }
 
 .size-input input {
+  flex-shrink: 1;
   margin-right: 15px;
   background-color: transparent;
   color: white;
-
+  min-width: 0px;
   border-radius: 10px;
   padding: 10px;
   outline: none;
@@ -240,5 +241,11 @@ body {
   to {
     bottom: 0;
     opacity: 0;
+  }
+}
+
+@media (max-width: 900px) {
+  .container {
+    max-width: 90%;
   }
 }
